# dhl2mhPy

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: dhl2mh-web.service
docs/: code-reference.md  logik-dokumentation.md
src/dhl2mh/: __main__.py  bundles.py  cli.py  config.py  filter.py  logging_setup.py  mapper.py  mapping.py  models.py  notifications.py  pipeline.py  service_resolver.py  shopware_mapping.py  web.py  xml_builder.py
src/dhl2mh/clients/: dhl.py  plenty.py  shopware.py
tests/: conftest.py  test_bundles.py  test_cli.py  test_config.py  test_dhl_client.py  test_filter.py  test_mapper.py  test_mapping.py  test_models.py  test_notifications.py  test_pipeline.py  test_plenty_client.py  test_service_resolver.py  test_shopware_client.py  test_shopware_mapping.py  test_web.py  test_xml_builder.py
tests/fixtures/: plenty_order_bundle.json  plenty_order_mit_bundle_artikel.json  plenty_orders.json  sw_order_erweitert.json  sw_order_mit_783117.json  sw_order_mit_accept.json
