[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhl2mh"
version = "0.1.0"
description = "Plenty → DHL DeliverIT pipeline (formerly C#)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "lxml>=5.2",
    "tenacity>=8.3",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
dhl2mh = "dhl2mh.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dhl2mh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
